@@ -1,4 +1,9 @@
 {{$NEXT}}
+  - Increase DBD::SQLite dependency to 1.64 to support configuring
+    double-quoted string literals.
+  - Disable double-quoted string literals for all connections.
+    https://www.sqlite.org/quirks.html#double_quoted_string_literals_are_accepted
+  - Change default SQL::Abstract identifier back to double quote.
 
 3.002     2019-06-21 17:41:35 EDT
   - Changed default SQL::Abstract identifier quoting character to `, as double
